[gd_scene load_steps=27 format=1]

[ext_resource path="res://screens/selection_screen/selection_screen.gd" type="Script" id=1]
[ext_resource path="res://screens/level_selection_screen/level_selection_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/selection_screen/scripts/fit_image.gd" type="Script" id=3]
[ext_resource path="res://screens/selection_screen/assets/fonts/name_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/KOBUGE-games.CircularContainer/CircularContainer.gd" type="Script" id=5]
[ext_resource path="res://addons/KOBUGE-games.CircularContainer/icon.png" type="Texture" id=6]
[ext_resource path="res://screens/selection_screen/assets/arrow_left_fade.png" type="Texture" id=7]
[ext_resource path="res://screens/selection_screen/assets/arrow_left.png" type="Texture" id=8]
[ext_resource path="res://screens/selection_screen/assets/arrow_left_active.png" type="Texture" id=9]
[ext_resource path="res://screens/selection_screen/assets/arrow_right_fade.png" type="Texture" id=10]
[ext_resource path="res://screens/selection_screen/assets/arrow_right.png" type="Texture" id=11]
[ext_resource path="res://screens/selection_screen/assets/arrow_right_active.png" type="Texture" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="ImageTexture" id=2]

flags = 7
image = Image()
size = Vector2( 0, 0 )
storage = 0
lossy_quality = 0.7

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=4]

length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=16]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=19]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="selection_screen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
prev_scene_path = "res://screens/menu_screen/menu_screen.tscn"
next_scene = ExtResource( 2 )
player_image_path = NodePath("canvas_layer/player_container/player_image")
player_name_path = NodePath("canvas_layer/player_name")
vehicle_image_path = NodePath("canvas_layer/vehicle_container/vehicle_image")
vehicle_name_path = NodePath("canvas_layer/vehicle_name")
circular_container_path = NodePath("canvas_layer/circular_container")
rotate_tween_path = NodePath("canvas_layer/rotate_tween")
arrow_left_path = NodePath("canvas_layer/arrow_left")
arrow_right_path = NodePath("canvas_layer/arrow_right")
button_continue_path = NodePath("canvas_layer/vbox_container/button_continue")
button_back_path = NodePath("canvas_layer/vbox_container/button_back")

[node name="canvas_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="player_container" type="PanelContainer" parent="canvas_layer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 187.0
margin/top = 256.0
margin/right = 699.0
margin/bottom = 768.0
custom_styles/panel = SubResource( 1 )

[node name="player_image" type="Sprite" parent="canvas_layer/player_container"]

texture = SubResource( 2 )
centered = false
script/script = ExtResource( 3 )

[node name="player_name" type="Label" parent="canvas_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 147.0
margin/top = 144.0
margin/right = 731.0
margin/bottom = 248.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 100
text = "C. Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vehicle_container" type="PanelContainer" parent="canvas_layer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1242.0
margin/top = 253.0
margin/right = 1754.0
margin/bottom = 765.0
custom_styles/panel = SubResource( 3 )

[node name="vehicle_image" type="Sprite" parent="canvas_layer/vehicle_container"]

transform/pos = Vector2( 256, 256 )
transform/rot = 74.5747
script/script = ExtResource( 3 )

[node name="anim_player" type="AnimationPlayer" parent="canvas_layer/vehicle_container/vehicle_image"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/vehicle_rotate = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "vehicle_rotate"

[node name="vehicle_name" type="Label" parent="canvas_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1207.0
margin/top = 144.0
margin/right = 1791.0
margin/bottom = 248.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 100
text = "V. Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="circular_container" type="Container" parent="canvas_layer"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = -540.0
script/script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}
arrange/force_squares = true
arrange/force_expand = true
arrange/start_angle = 0.0
arrange/start_empty = false
arrange/allow_node2d = false
animate/percent_visible = 1.0
animate/all_at_once = false

[node name="rotate_tween" type="Tween" parent="canvas_layer"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="vbox_container" type="VBoxContainer" parent="canvas_layer"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 256.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 25
alignment = 1

[node name="button_continue" type="Button" parent="canvas_layer/vbox_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 12.0
margin/right = 1920.0
margin/bottom = 115.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.822998, 0.546875, 1 )
custom_colors/font_color_hover = Color( 1, 0.498039, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.903534, 0.574219, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="label" type="Label" parent="canvas_layer/vbox_container/button_continue"]

visibility/behind_parent = true
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 104.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 100
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_back" type="Button" parent="canvas_layer/vbox_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 140.0
margin/right = 1920.0
margin/bottom = 243.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.822998, 0.546875, 1 )
custom_colors/font_color_hover = Color( 1, 0.498039, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.903534, 0.574219, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="label" type="Label" parent="canvas_layer/vbox_container/button_back"]

visibility/behind_parent = true
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 100
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="arrow_left" type="TextureButton" parent="canvas_layer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 743.0
margin/top = 429.0
margin/right = 826.0
margin/bottom = 673.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/hover = ExtResource( 8 )
textures/disabled = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="arrow_right" type="TextureButton" parent="canvas_layer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1091.0
margin/top = 429.0
margin/right = 1174.0
margin/bottom = 673.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/hover = ExtResource( 11 )
textures/disabled = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="texture_changed" from="canvas_layer/player_container/player_image" to="canvas_layer/player_container/player_image" method="_on_player_image_texture_changed"]

[connection signal="focus_enter" from="canvas_layer/vbox_container/button_continue" to="." method="_on_button_focus_enter"]

[connection signal="mouse_enter" from="canvas_layer/vbox_container/button_continue" to="." method="_on_button_focus_enter"]

[connection signal="pressed" from="canvas_layer/vbox_container/button_continue" to="." method="_on_button_continue_pressed"]

[connection signal="focus_enter" from="canvas_layer/vbox_container/button_back" to="." method="_on_button_focus_enter"]

[connection signal="mouse_enter" from="canvas_layer/vbox_container/button_back" to="." method="_on_button_focus_enter"]

[connection signal="pressed" from="canvas_layer/vbox_container/button_back" to="." method="_on_button_back_pressed"]

[connection signal="pressed" from="canvas_layer/arrow_left" to="." method="left_character"]

[connection signal="pressed" from="canvas_layer/arrow_right" to="." method="right_character"]


